--- a/exercicio-01.html
+++ b/exercicio-01.html
@@ -5,11 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Exercício 1 </title>
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/dashboard.css">
+    <link rel="stylesheet" href="assets/css/jsdom.css">
 
 </head>
 
@@ -110,20 +111,61 @@
             <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
                 <div
                     class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-                    <h1 class="h2">Dashboard</h1>
+                    <h1 class="h2">Exercício 1</h1>
+                    <nav aria-label="breadcrumb">
+                        <ol class="breadcrumb">
+                            <li class="breadcrumb-item"><a href="index.html">Dashboard</a></li>
+                            <li class="breadcrumb-item active" aria-current="page">Exercício 1</li>
+
+                        </ol>
+                    </nav>
                 </div>
+                <div class="row">
+                    <div class="col-sm-12">
+                        <p>Uma loja precisa de um programa para simular quanto um vendedor vai receber de salário bruto.
+                            Para isto a loja paga um salário comercial de 1.300 reais + 10%
+                            de comissão em cima do total de vendas. O vendedor irá usar o simulador informando: Quanto
+                            ele vendeu no mês, o programa deverá calcular e mostrar qual será
+                            o salário bruto dele no mês. </p>
+                    </div>
+                </div>
+                <form>
+                <div class="row">
+                    <div class="col-sm-12 col-md-6 col-lg-6">
+                        <label for="nome do vendedor">Nome do Vendedor</label>
+                        <input id="nomeVendedor" type="text" class="form-control" required>
+                    </div>
+                    <div class="col-sm-12 col-md-3 col-lg-3">
+                        <label for="totalVendas">Total de vendas (mês)</label>
+                        <input id="totalVendas" type="number" class="form-control" required>
+                    </div>
+                    <div class="col-sm-12 col-md-2 col-lg-2 pt-30 ">
+                        <button type="button" class="btn btn-success" onclick="simuladorSalario()">Simular</button>
+                    </div>
+
+
+                </div>
+                <div class="row invisible" id="mensagemResultado">
+                    <div class="col-sm-9 col-md-9 col-lg-9 pt-30">
+                        <div class="alert alert-success" role="alert" id="">
+                            <h5>A simple success alert—check it out!</h5>
+                        </div>
+                        
+                    </div>
+                </div>
+            </form>
             </main>
             <!--#endregion-->
         </div>
+
     </div>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script>window.jQuery || document.write('<script src="/docs/4.3/assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
     <script src="https://getbootstrap.com/docs/4.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-xrRywqdh3PHs8keKZN+8zzc5TX0GRTLCcmivcbNJWm2rs5C8PRhcEn3czEjhAO9o"
         crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/feather-icons/4.9.0/feather.min.js"></script>
+    <script src="assets/js/exercicio01.js"></script>
     <script>
         feather.replace()
     </script>
