--- a/exercicio-08.html
+++ b/exercicio-08.html
@@ -1,33 +1,29 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-
-    <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/dashboard.css">
-
 </head>
 
 <body>
-    <!--#region Barra de navegação superior-->
+    <!--#region  Barra de navegacao superior -->
     <nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap p-0 shadow">
-        <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="#">SENAI - Web dev</a>
-        <input class="form-control form-control-dark w-100" type="text" placeholder="" aria-label="Search">
+        <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="#">SENAI - web dev</a>
         <ul class="navbar-nav px-3">
             <li class="nav-item text-nowrap">
                 <a class="nav-link" href="#">Sign out</a>
             </li>
         </ul>
     </nav>
-    <!--#endregion-->
+    <!--#endregion -->
     <div class="container-fluid">
-        <div class="now">
-            <!--#region Barra de navegação esquerda-->
+        <div class="row">
+            <!--#region Barra de navegacao esquerda -->
             <nav class="col-md-2 d-none d-md-block bg-light sidebar">
                 <div class="sidebar-sticky">
                     <ul class="nav flex-column">
@@ -73,13 +69,11 @@
                                 Exercicío 06
                             </a>
                         </li>
-                        </li>
                         <li class="nav-item">
                             <a class="nav-link" href="exercicio-07.html">
                                 <span data-feather="file-text"></span>
                                 Exercicío 07
                             </a>
-                        </li>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active" href="exercicio-08.html">
@@ -87,13 +81,11 @@
                                 Exercicío 08
                             </a>
                         </li>
-                        </li>
                         <li class="nav-item">
                             <a class="nav-link" href="exercicio-09.html">
                                 <span data-feather="file-text"></span>
                                 Exercicío 09
                             </a>
-                        </li>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="exercicio-10.html">
@@ -102,16 +94,135 @@
                             </a>
                         </li>
                     </ul>
-
                 </div>
             </nav>
             <!--#endregion-->
-            <!--#region Conteúdo principal-->
+            <!--#region Conteudo principal-->
             <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
                 <div
                     class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-                    <h1 class="h2">Dashboard</h1>
+                    <h1 class="h2">Exercício 08</h1>
+                    <nav aria-label="breadcrumb">
+                        <ol class="breadcrumb">
+                            <li class="breadcrumb-item"><a href="index.html">Dashboard</a></li>
+                            <li class="breadcrumb-item active" aria-current="page">Exercício 08</li>
+                        </ol>
+                    </nav>
                 </div>
+                <section class="row">
+                    <header class="col-sm-12">
+                        <p>Uma loja precisa de um programa para simular quanto um vendedor vai receber de salário
+                            líquido. A loja paga 10% de comissão em cima do total de vendas. O vendedor irá usar o
+                            simulador informando: Seu salário base e o que ele vendeu no mês, o programa deverá calcular
+                            e mostrar qual será o salário liquido dele no mês.
+                            Sobre o salário bruto do funcionário incide alguns descontos como INSS e <b
+                                data-toggle="tooltip" data-placement="bottom"
+                                title=" o Imposto de Renda é uma forma do governo identificar fraudes no pagamento dos impostos. Por isso, você deve ter muita atenção quando for fazer sua declaração, não deixando nada para trás e lembrando de apresentar comprovantes iguais aos utilizados na declaração, tanto para ganhos quanto para gastos.">IRRF</b>.
+                        </p>
+                    </header>
+                    <article class="col-sm-12 col-md-6">
+                        <table class="table table-hover">
+                            <thead>
+                                <tr class="bg-light">
+                                    <th scope="col">Salário de Contribuição</th>
+                                    <th scope="col">Alíquota de INSS</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>até 1.751,81</td>
+                                    <td>8%</td>
+                                </tr>
+                                <tr>
+                                    <td>de 1.751,82 até 2.919,72</td>
+                                    <td>9%</td>
+                                </tr>
+                                <tr>
+                                    <td>de 2.919,73 até 5.839,45</td>
+                                    <td>11%</td>
+                                </tr>
+                            </tbody>
+
+                        </table>
+                    </article>
+                    <article class="col-sm-12 col-md-6">
+                        <table class="table table-hover">
+                            <thead>
+                                <tr class="bg-light">
+                                    <th scope="col">BASE DE CALCULO(R$)</th>
+                                    <th scope="col">ALÍQUOTA IRRF(%)</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>Até 1.903,98</td>
+                                    <td>-</td>
+                                </tr>
+                                <tr>
+                                    <td>De 1.903,99 até 2.826,65</td>
+                                    <td>7,5%</td>
+                                </tr>
+                                <tr>
+                                    <td>De 2.826,66 até 3.751,05</td>
+                                    <td>15%</td>
+                                </tr>
+                                <tr>
+                                    <td>De 3.751,06 até 4.664,68</td>
+                                    <td>22,5%</td>
+                                </tr>
+                                <tr>
+                                    <td>Acima de 4.664,68</td>
+                                    <td>27,5%</td>
+                                </tr>
+
+                            </tbody>
+                        </table>
+                        <div class="alert alert-primary" role="alert">
+                            O IRRF é uma antecipação do pagamento Imposto de Renda cobrado pela Receita Federal dos
+                            trabalhadores com carteira assinada.
+                        </div>
+                    </article>
+
+                    <article class="col-sm-12 col-md-6">
+
+                    </article>
+                </section>
+                <form>
+                    <div class="row">
+                        <div class="col-sm-12 col-md-4">
+                            <div class="form-group">
+                                <label for="nomeVendedor">Nome do vendedor</label>
+                                <input id="nomeVendedor" type="text"  maxlength="10" required>
+                            </div>
+
+                        </div>
+                        
+                        <div class="col-sm-12 col-md-4">
+                            <div class="form-group">
+                                <label for="salarioBase">Salário base</label>
+                                <input id="salarioBase" type="number" maxlength="10" required>
+                            </div>
+
+                        </div>
+                    
+
+                    <div class="col-sm-12 col-md-4">
+                        <div class="form-group">
+                            <label for="totalVendas">Total de Vendas do mês</label>
+                            <input id="totalVendas" type="number" maxlength="10" required>
+                        </div>
+
+                    </div>
+
+
+                    <div class="col-sm-12 col-md-4">
+                        <div class="form-group">
+                            <button type="button" class="btn-success" onclick="calcularSalarioLiquido()">Simular</button>
+                        </div>
+
+                    </div>
+                </div>
+                </form>
             </main>
             <!--#endregion-->
         </div>
@@ -119,15 +230,12 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
-    <script>window.jQuery || document.write('<script src="/docs/4.3/assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
-    <script src="https://getbootstrap.com/docs/4.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-xrRywqdh3PHs8keKZN+8zzc5TX0GRTLCcmivcbNJWm2rs5C8PRhcEn3czEjhAO9o"
-        crossorigin="anonymous"></script>
+    <script src="https://getbootstrap.com/docs/4.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/feather-icons/4.9.0/feather.min.js"></script>
+    <script src="assets/js/exercicio08.js"></script>
     <script>
         feather.replace()
     </script>
-
 </body>
 
 </html>
