--- a/exercicio-02.html
+++ b/exercicio-02.html
@@ -1,34 +1,29 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Exercício 1 </title>
-
-    <!-- Bootstrap core CSS -->
+    <title>Document</title>
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/dashboard.css">
     <link rel="stylesheet" href="assets/css/jsdom.css">
-
 </head>
 
 <body>
-    <!--#region Barra de navegação superior-->
+    <!--#region  Barra de navegacao superior -->
     <nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap p-0 shadow">
-        <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="#">SENAI - Web dev</a>
-        <input class="form-control form-control-dark w-100" type="text" placeholder="" aria-label="Search">
+        <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="#">SENAI - web dev</a>
         <ul class="navbar-nav px-3">
             <li class="nav-item text-nowrap">
                 <a class="nav-link" href="#">Sign out</a>
             </li>
         </ul>
     </nav>
-    <!--#endregion-->
+    <!--#endregion -->
     <div class="container-fluid">
-        <div class="now">
-            <!--#region Barra de navegação esquerda-->
+        <div class="row">
+            <!--#region Barra de navegacao esquerda -->
             <nav class="col-md-2 d-none d-md-block bg-light sidebar">
                 <div class="sidebar-sticky">
                     <ul class="nav flex-column">
@@ -74,13 +69,11 @@
                                 Exercicío 06
                             </a>
                         </li>
-                        </li>
                         <li class="nav-item">
                             <a class="nav-link" href="exercicio-07.html">
                                 <span data-feather="file-text"></span>
                                 Exercicío 07
                             </a>
-                        </li>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="exercicio-08.html">
@@ -88,13 +81,11 @@
                                 Exercicío 08
                             </a>
                         </li>
-                        </li>
                         <li class="nav-item">
                             <a class="nav-link" href="exercicio-09.html">
                                 <span data-feather="file-text"></span>
                                 Exercicío 09
                             </a>
-                        </li>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="exercicio-10.html">
@@ -103,69 +94,58 @@
                             </a>
                         </li>
                     </ul>
-
                 </div>
             </nav>
             <!--#endregion-->
-            <!--#region Conteúdo principal-->
+            <!--#region Conteudo principal-->
             <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
-                <div
-                    class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-                    <h1 class="h2">Exercício 2</h1>
+                <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+                    <h1 class="h2">Exercício 02</h1>
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb">
                             <li class="breadcrumb-item"><a href="index.html">Dashboard</a></li>
-                            <li class="breadcrumb-item active" aria-current="page">Exercício 1</li>
-
+                            <li class="breadcrumb-item active" aria-current="page">Exercício 02</li>
                         </ol>
                     </nav>
                 </div>
-                <div class="row">
-                    <div class="col-sm-12">
-                        <p>Crie um algoritmo que leia dois valores inteiros distintos, ao final mostre qual é maior. </p>
+                <section class="row">
+                    <header class="col-sm-12">
+                        <p>Crie um programa que leia 5 nomes de pessoas, em seguida o programa deverá imprimir esses 5
+                            nomes em Letras maiúsculas. Sabemos que as linguagens de programação oferecem alguns
+                            recursos chamados bibliotecas que permitem expandir a capacidade das linguagens. O portugol
+                            possuí uma biblioteca chamada Texto que permite o uso de uma função chamada caixa_alta()
+                            para converter textos para letras maiúsculas.</p>
+                    </header>
+                </section>
+                <section class="row">
+                    <div class="col-md-4">
+                        <label for="nome">Nome</label>
+                        <input id="nome" class="form-control" type="text" required> 
+                    </div>
+                    <div class="col-md-2">
+                        <div class="form-group pt-30">
+                        <button type="button" class="btn btn-outline-primary" onclick="adicionarNome()">Adicionar</button>
                     </div>
                 </div>
-                <form>
-                <div class="row">
-                    <div class="col-sm-12 col-md-6 col-lg-6">
-                        <label for="valor 1">Valor 1</label>
-                        <input id="valor1" type="text" class="form-control" required>
-                    </div>
-                    <div class="col-sm-12 col-md-6 col-lg-6">
-                        <label for="valor 2">Valor 2</label>
-                        <input id="valor2" type="text" class="form-control" required>
-                    </div>
-                    <div class="col-sm-12 col-md-2 col-lg-2 pt-30 ">
-                        <button type="button" class="btn btn-success" onclick="comparadorValores()">Calcular</button>
-                    </div>
-
-
-                </div>
-                <div class="row invisible" id="mensagemResultado">
-                    <div class="col-sm-9 col-md-9 col-lg-9 pt-30">
-                        <div class="alert alert-success" role="alert" id="">
-                            <h5>A simple success alert—check it out!</h5>
-                        </div>
-                        
-                    </div>
-                </div>
-            </form>
+                </section>
+                <section class="row">
+                <div class="col-md-12">
+                    <ol id="listarNomes">
+                    </ol>
+                </section>
             </main>
             <!--#endregion-->
         </div>
-
     </div>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-    <script>window.jQuery || document.write('<script src="/docs/4.3/assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
-    <script src="https://getbootstrap.com/docs/4.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-xrRywqdh3PHs8keKZN+8zzc5TX0GRTLCcmivcbNJWm2rs5C8PRhcEn3czEjhAO9o"
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
+    <script src="https://getbootstrap.com/docs/4.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/feather-icons/4.9.0/feather.min.js"></script>
-    <script src="assets/js/exercicio02.js"></script>
+    <script src="assets/js/exercicio2.js"></script>
     <script>
         feather.replace()
     </script>
-
 </body>
 
 </html>
