--- a/exercicio-08.html
+++ b/exercicio-08.html
@@ -111,80 +111,68 @@
                 </div>
                 <section class="row">
                     <header class="col-sm-12">
-                        <p>Uma loja precisa de um programa para simular quanto um vendedor vai receber de salário
-                            líquido. A loja paga 10% de comissão em cima do total de vendas. O vendedor irá usar o
-                            simulador informando: Seu salário base e o que ele vendeu no mês, o programa deverá calcular
-                            e mostrar qual será o salário liquido dele no mês.
-                            Sobre o salário bruto do funcionário incide alguns descontos como INSS e <b
-                                data-toggle="tooltip" data-placement="bottom"
-                                title=" o Imposto de Renda é uma forma do governo identificar fraudes no pagamento dos impostos. Por isso, você deve ter muita atenção quando for fazer sua declaração, não deixando nada para trás e lembrando de apresentar comprovantes iguais aos utilizados na declaração, tanto para ganhos quanto para gastos.">IRRF</b>.
-                        </p>
+                        <p>Uma loja precisa de um programa para simular quanto um vendedor vai receber de salário líquido. A loja paga 10% de comissão em cima do total de vendas. O vendedor irá usar o simulador informando: Seu salário base e o que ele vendeu no mês, o programa deverá calcular e mostrar qual será o salário liquido dele no mês. 
+                            Sobre o salário bruto do funcionário incide alguns descontos como INSS e  <b data-toggle="tooltip" data-placement="bottom" title="O IRRF é uma antecipação do pagamento Imposto de Renda cobrado pela Receita Federal dos trabalhadores com carteira assinada.">IRRF</b>.                                                      
+                        </p>                        
                     </header>
                     <article class="col-sm-12 col-md-6">
                         <table class="table table-hover">
                             <thead>
-                                <tr class="bg-light">
-                                    <th scope="col">Salário de Contribuição</th>
-                                    <th scope="col">Alíquota de INSS</th>
-                                </tr>
+                              <tr class="bg-light">
+                                <th scope="col">Salário de Contribuição</th>
+                                <th scope="col">Alíquota de INSS</th>
+                              </tr>
                             </thead>
                             <tbody>
-                                <tr>
-                                    <td>até 1.751,81</td>
-                                    <td>8%</td>
-                                </tr>
-                                <tr>
-                                    <td>de 1.751,82 até 2.919,72</td>
-                                    <td>9%</td>
-                                </tr>
-                                <tr>
-                                    <td>de 2.919,73 até 5.839,45</td>
-                                    <td>11%</td>
-                                </tr>
+                              <tr>
+                                <td>até 1.751,81</td>
+                                <td>8%</td>
+                              </tr>
+                              <tr>
+                                <td>de 1.751,82 até 2.919,72</td>
+                                <td>9%</td>
+                              </tr>
+                              <tr>
+                                <td>de 2.919,73 até 5.839,45</td>
+                                <td>11%</td>
+                              </tr>
                             </tbody>
-
-                        </table>
+                          </table>
                     </article>
                     <article class="col-sm-12 col-md-6">
                         <table class="table table-hover">
                             <thead>
-                                <tr class="bg-light">
-                                    <th scope="col">BASE DE CALCULO(R$)</th>
-                                    <th scope="col">ALÍQUOTA IRRF(%)</th>
-                                </tr>
+                              <tr class="bg-light">
+                                <th scope="col">Salário de Contribuição</th>
+                                <th scope="col">Alíquota de INSS</th>
+                              </tr>
                             </thead>
                             <tbody>
-                                <tr>
-                                    <td>Até 1.903,98</td>
-                                    <td>-</td>
-                                </tr>
-                                <tr>
-                                    <td>De 1.903,99 até 2.826,65</td>
-                                    <td>7,5%</td>
-                                </tr>
-                                <tr>
-                                    <td>De 2.826,66 até 3.751,05</td>
-                                    <td>15%</td>
-                                </tr>
-                                <tr>
-                                    <td>De 3.751,06 até 4.664,68</td>
-                                    <td>22,5%</td>
-                                </tr>
-                                <tr>
-                                    <td>Acima de 4.664,68</td>
-                                    <td>27,5%</td>
-                                </tr>
-
+                              <tr>
+                                <td>Até 1.903,98</td>
+                                <td>-</td>
+                              </tr>
+                              <tr>
+                                <td>de 1.903,99 até 2.826,65</td>
+                                <td>7,5%</td>
+                              </tr>
+                              <tr>
+                                <td>de 2.826,66 até 3.751,05</td>
+                                <td>15%</td>
+                              </tr>
+                              <tr>
+                                <td>de 3.751,06 até 4.664,68</td>
+                                <td>22,5%</td>
+                              </tr>
+                              <tr>
+                                <td>Acima de 4.664,68</td>
+                                <td>27,5%</td>
+                              </tr>
                             </tbody>
-                        </table>
-                        <div class="alert alert-primary" role="alert">
-                            O IRRF é uma antecipação do pagamento Imposto de Renda cobrado pela Receita Federal dos
-                            trabalhadores com carteira assinada.
+                          </table>
+                          <div class="alert alert-info">
+                            O IRRF é calculado sobre o valor do salário bruto, subtraído o desconto do INSS.
                         </div>
-                    </article>
-
-                    <article class="col-sm-12 col-md-6">
-
                     </article>
                 </section>
                 <form>
@@ -192,36 +180,27 @@
                         <div class="col-sm-12 col-md-4">
                             <div class="form-group">
                                 <label for="nomeVendedor">Nome do vendedor</label>
-                                <input id="nomeVendedor" type="text"  maxlength="10" required>
+                                <input id="nomeVendedor" type="text" class="form-control" maxlength="10" required>
                             </div>
-
                         </div>
-                        
-                        <div class="col-sm-12 col-md-4">
+                        <div class="col-sm-12 col-md-3">
                             <div class="form-group">
-                                <label for="salarioBase">Salário base</label>
-                                <input id="salarioBase" type="number" maxlength="10" required>
+                                <label for="salarioBase">Salario base</label>
+                                <input id="salarioBase" type="number" class="form-control" required>
                             </div>
-
                         </div>
-                    
-
-                    <div class="col-sm-12 col-md-4">
-                        <div class="form-group">
-                            <label for="totalVendas">Total de Vendas do mês</label>
-                            <input id="totalVendas" type="number" maxlength="10" required>
+                        <div class="col-sm-12 col-md-3">
+                            <div class="form-group">
+                                <label for="totalVendas">Total de vendas do mês</label>
+                                <input id="totalVendas" type="number" class="form-control" required>
+                            </div>
                         </div>
-
+                        <div class="col-sm-12 col-md-2">
+                            <div class="form-group pt-30">
+                                <button type="button" class="btn btn-success" onclick="calcularSalarioLiquido()">Simular</button>
+                            </div>
+                        </div>
                     </div>
-
-
-                    <div class="col-sm-12 col-md-4">
-                        <div class="form-group">
-                            <button type="button" class="btn-success" onclick="calcularSalarioLiquido()">Simular</button>
-                        </div>
-
-                    </div>
-                </div>
                 </form>
             </main>
             <!--#endregion-->
@@ -233,7 +212,7 @@
     <script src="https://getbootstrap.com/docs/4.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/feather-icons/4.9.0/feather.min.js"></script>
     <script src="assets/js/exercicio08.js"></script>
-    <script>
+   <script>
         feather.replace()
     </script>
 </body>
